fixed gap thing

--- a/styles/_introduction.scss
+++ b/styles/_introduction.scss
@@ -5,6 +5,7 @@
   background: $magenta;
   color: #fff;
   font-size: 16px;
+  margin-top: -2px;
 
   @include lg {
     font-size: 19px;
